--- a/translations/pt-BR/loc/elements/abilities.json
+++ b/translations/pt-BR/loc/elements/abilities.json
@@ -285,7 +285,7 @@
                 "lantern": 1,
                 "influence": 1
             },
-            "description": "Eu engulo conhecimento enquanto uma sombra engole a luz. Eu posso estar perto de avançar. [Erudição pode ser usada com o Estudo para ganhar o Razão. Dura apenas três minutos, se não for usado.]",
+            "description": "Eu engulo conhecimento como uma uma sombra engole a luz. Eu posso estar perto de avanços. [Erudição pode ser usada com o Estudo para ganhar Razão. Dura apenas três minutos, se não for usado.]",
             "lifetime": 180,
             "xtriggers": {
                 "upgradeinfluence": "influencelanternc"
