--- a/translations/pt-BR/loc/recipes/dream_mansus.json
+++ b/translations/pt-BR/loc/recipes/dream_mansus.json
@@ -606,7 +606,7 @@
                 "waystagbefore_4": 1,
                 "fragmentknockc": 1
             },
-            "startdescription": "'Eu, eu mesmo, devo ser aberto. Contemple o sangue que é derramado.'",
+            "startdescription": "'Eu, eu mesmo, devo ser aberto. Contemple o meu sangue que é derramado.'",
             "description": "A Porta mói-se em dois pedaços. A luz do Vigia inunda os corredores de dentro. Um gemido moedor vem da Cabeça, Ghirbi. Lágrimas de bronze derretido protuberam-se de seus olhos e rolam bochecha abaixo, abrasando o chão abaixo. Eu poderei entrar!",
             "effects": {
                 "riddle": -1,
