--- a/translations/pt-BR/loc/decks/vaults.json
+++ b/translations/pt-BR/loc/decks/vaults.json
@@ -46,7 +46,7 @@
         {
             "id": "vaultslandbeyondforest",
             "label": "Locais Ocultos na Terra Além da Floresta",
-            "description": "Uma manta de retalhos de possibilidades em uma montanha assombrada.",
+            "description": "Uma colcha de retalhos de possibilidades em uma terra assombrada por montanhas.",
             "spec": [
                 "vaultlandbeyondforest1",
                 "vaultlandbeyondforest2",
@@ -86,7 +86,7 @@
         {
             "id": "vaultseveningisles",
             "label": "Locais Ocultos nas Ilhas Tardias",
-            "description": "Ilhas não mapeadas no âmbito do Porto do Meio-Dia.",
+            "description": "Ilhas não mapeadas no limar de Porto do Meio-Dia.",
             "spec": [
                 "vaulteveningisles1",
                 "vaulteveningisles2",
